Finally the -synctex problem is possibly solved.

--- a/test.tex
+++ b/test.tex
@@ -5,6 +5,8 @@
 \begin{document}
 This is a nice article $a^2$. For example \cite{ah:affinetvar} \index{Haha}
 
+Hah! $\alpha$ was a nice fellow. However $\beta$ wasn't.
+
 \bibliographystyle{amsalpha}
 \bibliography{references}
 \printindex
